# lvgl8-ST7735

./: .gitignore  CMakeLists.txt  README.md  custom_targets.lib  lv_conf.h  lvgl.lib  lvgl8-ST7735.code-workspace  lvglDriver.lib  main.cpp  mbed_app.json  workspace.code-workspace
IRMP/: irmp.c  irmp.h  irmpconfig.h  irmpprotocols.h  irmpsystem.h
lvScreens/: img_hand.c  watch_bg.c
